public class AssaultRifle : BaseWeapon
{
    protected override float SpreadMultiplier => 1.15f;
}
