[System.Serializable]
public class Pistol : BaseWeapon
{
    protected override float SpreadMultiplier => 0.8f;
}
